<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/btn_date"
        android:text="@string/et_date_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_time"
        android:layout_below="@+id/btn_date"
        android:layout_marginTop="30dp"
        android:text="@string/et_time_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_below="@+id/btn_time"
        android:hint="@string/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>