<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_title"
        android:gravity="center"
        android:text="@string/app_title2"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_passport"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/va_passport"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_go_passport"
        android:layout_below="@+id/tv_title2"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/va_register"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_go_register"
        android:layout_below="@+id/btn_passport"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"
        />

</RelativeLayout>